@@ -251,3 +251,14 @@ Calculations to 30 000 K",
   year={2012},
   publisher={Elsevier}
 }
+
+@article{ajp:1973:crompton,
+  title={The drift velocity of electrons in oxygen at 293 K},
+  author={Crompton, RW and Elford, MT},
+  journal={Australian Journal of Physics},
+  volume={26},
+  number={6},
+  pages={771--782},
+  year={1973},
+  publisher={CSIRO Publishing}
+}
