@@ -478,6 +478,15 @@ where $(c_p)_k$ is the specific heat at constant pressure of the $k$th species a
 \caption{Results for the mobility of electrons in ${\rm N_2}$, showing (a) product of mobility and number density, and (b) error percentage of cubic spline fit of  mobility data. The BOLSIG+ calculation uses electron impact cross sections from the Morgan database in Ref.\ \citen{jcp:2012:morgan}. Experimental data obtained from Ch.\ 21 of Ref.\ \citen{book:1997:grigoriev}.}
 \label{fig:mobility_N2}
 \end{figure}
+%
+\begin{figure}
+\centering
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{figs/mobility_O2.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{figs/mobility_O2_error.png}}
+\caption{Results for the mobility of electrons in ${\rm O_2}$, showing (a) product of mobility and number density, and (b) error percentage of cubic spline fit of  mobility data. The BOLSIG+ calculation uses electron impact cross sections from the Morgan database in Ref.\ \citen{jcp:2012:morgan}. Experimental data obtained from Ch.\ 21 of Ref.\ \citen{book:1997:grigoriev} and Fig. 4 of Ref.\ \citen{ajp:1973:crompton}}
+\label{fig:mobility_O2}
+\end{figure}
+
 
 
 \subsection{Electron Mobility}
@@ -1501,5 +1510,3 @@ electron energy loss function:
    \end{threeparttable}
 \end{table}
 %
-
-
